--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@
 cmake_minimum_required(VERSION 3.25)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # git submodule add https://github.com/microsoft/vcpkg vendor/vcpkg
 set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vendor/vcpkg/scripts/buildsystems/vcpkg.cmake"
@@ -21,7 +22,7 @@ file(GLOB SOURCES
 
 add_executable(PittyPutty ${SOURCES})
 
-# Setup bägla
+# Setup bï¿½gla
 add_subdirectory(vendor/bagla-engine)
 target_include_directories(PittyPutty PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/vendor/bagla-engine/include" )
 
