--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
 file(GLOB SOURCES
-    src/*.h
-    src/*.cpp
+    src/client/*.h
+    src/client/*.cpp
 )
 
 add_executable(PittyPutty ${SOURCES})
